# IT3385_MLOPS

./: Dockerfile  README.md  pyproject.toml
configs/: streamlit.yaml
data/demo/: wheat.csv
data/training/: Train_melbourne_clean.csv  Used_Car_Prices_Model_Training.csv
docs/: UserGuide.md
saved_models/: car_price.pkl  melbourne.pkl  wheat.pkl
src/: __init__.py
src/models/melbourne/: Task1_Melbourne_EDA_230746D.ipynb  Task2_Melbournne_model_230746D.ipynb  model.py
src/models/used_car_prices/: IT3385_Task1_EDA_232237W_AniqSufi.ipynb  IT3385_Task2_232237W_AniqSufi.ipynb  model.py
src/models/wheat/: 220926F_IT3385_Task1_2.ipynb  model.py
src/streamlit/: Home.py
src/streamlit/assets/: used_car_prices.html  used_car_prices_training_metrics.json
src/streamlit/pages/: 1_Wheat.py  2_Melbourne.py  3_Used_Car_Prices.py
